--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "^1.6",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.5",
+        "yajra/laravel-datatables": "^1.4"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
