--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=db_dev_engrafa
-DB_USERNAME=finley
-DB_PASSWORD=Fin2018!!
+DB_DATABASE=engrafa
+DB_USERNAME=root
+DB_PASSWORD=hatred21st
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
