homepage part 2 (backup)

--- a/.env
+++ b/.env
@@ -10,14 +10,14 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=db_dev_engrafa
-DB_USERNAME=finley
-DB_PASSWORD=Fin2018!!
+DB_USERNAME=root
+DB_PASSWORD=root123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=1
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
