--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_NAME='Tata Kelola IT'
 APP_ENV=local
 APP_KEY=base64:Lp/nsn/6gxzgjsSaDdC9PGJTq3o8g/EpXb6kYuMvLHE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=db_dev_engrafa
+DB_DATABASE=engrafa
 DB_USERNAME=root
 DB_PASSWORD=root123
 
@@ -17,7 +17,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=1
+SESSION_LIFETIME=10
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
