--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.5",
+        "pusher/pusher-php-server": "^3.2",
         "yajra/laravel-datatables": "^1.4"
     },
     "require-dev": {
