--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "pusher-js": "^4.3.1",
         "sweetalert2": "^7.32.4"
     }
 }
