--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=engrafa
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=db_dev_engrafa
+DB_USERNAME=finley
+DB_PASSWORD=Fin2018!!
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -30,10 +30,10 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=675892
+PUSHER_APP_KEY=b283a188977a95d1722d
+PUSHER_APP_SECRET=23d33881149646d0e9b6
+PUSHER_APP_CLUSTER=ap1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
