--- a/.env
+++ b/.env
@@ -7,9 +7,11 @@ APP_URL=http://localhost:8000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_SOCKET=C:\xampp\mysql\mysql.sock
+# DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=engrafa
+DB_DATABASE=laravel_engrafa
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -23,12 +25,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+# MAIL_DRIVER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
