--- a/.env
+++ b/.env
@@ -7,7 +7,9 @@ APP_URL=http://localhost:8000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_SOCKET=C:\xampp\mysql\mysql.sock
+# DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=db_dev_engrafa
 DB_USERNAME=finley
@@ -30,6 +32,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
 
 PUSHER_APP_ID=675892
 PUSHER_APP_KEY=b283a188977a95d1722d
