--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ APP_URL=http://localhost:8000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_SOCKET=C:\xampp\mysql\mysql.sock
+DB_SOCKET=/var/lib/mysql/mysql.sock
+# DB_SOCKET=C:\xampp\mysql\mysql.sock
 # DB_HOST=localhost
 DB_HOST=127.0.0.1
 DB_PORT=3306
