--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,18 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "ext-json": "1.5.0",
+        "ext-json": "1.7.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.5",
         "pusher/pusher-php-server": "^3.2",
-        "yoeunes/toastr": "^1.1"
         "spatie/db-dumper": "^2.12",
         "spatie/laravel-backup": "^5.0.0",
-        "yajra/laravel-datatables": "^1.4"
+        "uxweb/sweet-alert": "^2.0",
+        "yajra/laravel-datatables": "^1.4",
+        "yoeunes/toastr": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
